@@ -61,3 +61,4 @@
 
 * Pre-built release updated to Frida v12.10.4
 * Preparation for Electron v10 Remote deprecation
+* Added example: MsvpPasswordValidate
